--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Selamat Datang</h1>
-    <p>Di Tugas Web Dev</p>
+    <p>Di Tugas Web Dev (Fitur Baru)</p>
 </body>
 </html>
